Fixed moving button.
The button was moving with the adjacent square. Turns out the divs were not aligned properly.

--- a/squarry_go_round.css
+++ b/squarry_go_round.css
@@ -8,7 +8,7 @@ button.go {
     min-width:100px;
     position:fixed;
     top:260px;
-    left:20;
+    left:20px;
 }
 
 div.square1 {
